timer optimization and color change

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,10 +9,10 @@
 
     <!-- Style colors (based on custom colors below). -->
     <!-- Ambient Style (used when wearable in ambient mode. -->
-    <color name="ambient_primary_color">@color/white</color>
-    <color name="ambient_secondary_color">@color/white_50</color>
+    <color name="ambient_primary_color">@color/white_70</color>
+    <color name="ambient_secondary_color">@color/white_30</color>
     <color name="ambient_background_color">@color/black</color>
-    <color name="ambient_outer_element_color">@color/white_30</color>
+    <color name="ambient_outer_element_color">@color/white_10</color>
 
     <!-- Red Style -->
     <color name="red_primary_color">@color/maroon_light</color>
